--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="顶呱呱的阿杰 awajie awesomewajie awajie-help nonebot-plugin-xjie-weather nonebot-plugin-calc24" />
+    <meta name="description" content="一些关于ajdgg的帮助" />
     <link rel="icon" type="image/svg+xml" href="/AwajieLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>awesome wajie-help</title>
