--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>awesome ajie-help</title>
   </head>
-  <body>
+  <body data-theme="light">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
