--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: AwAjie 139576615+ajdgg@users.noreply.github.com
+ * @Date: 2024-07-07 23:43:24
+ * @LastEditors: AwAjie 139576615+ajdgg@users.noreply.github.com
+ * @LastEditTime: 2024-08-22 00:57:43
+ * @FilePath: \awajie-help\index.html
+ * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
+-->
 <!doctype html>
 <html lang="en">
   <head>
@@ -11,5 +19,11 @@
   <body data-theme="light">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- 
+          ∧_∧__
+       ／(*´o｀)／＼
+      ／|￣∪∪￣|＼／
+      　|＿＿ ＿|／
+    -->
   </body>
 </html>
